--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .dark .gradient-text {
+            background: none;
+            color: #e4e2dd;
+            -webkit-text-fill-color: #e4e2dd;
+        }
         .animate-float {
             animation: float 6s ease-in-out infinite;
         }
@@ -70,9 +75,12 @@
             100% { transform: rotate(360deg); }
         }
         .gradient-border {
-            background: linear-gradient(60deg, #0d9488, #3b82f6, #8b5cf6);
+            background: linear-gradient(60deg, #0d9488, #0d9488, #0d9488);
             background-size: 200% 200%;
             animation: gradient 15s ease infinite;
+        }
+        .dark .gradient-border {
+            background: linear-gradient(60deg, #ffaf00, #ffaf00, #ffaf00);
         }
         @keyframes gradient {
             0% { background-position: 0% 50%; }
@@ -116,9 +124,6 @@
         * {
             transition: background-color 0.3s ease, color 0.3s ease;
         }
-        .hamburger-line {
-            @apply w-6 h-0.5 bg-gray-600 dark:bg-[#992800] mb-1.5;
-        }
     </style>
 </head>
 <body class="bg-[#F8F7F1] dark:bg-[#292929] overflow-x-hidden w-screen">
@@ -128,22 +133,22 @@
             <div class="flex justify-between items-center h-16">
                 <a href="index.html" class="text-xl font-bold text-teal-700 dark:text-[#992800] sm:text-2xl md:text-3xl font-poppins">Stefan Trajkovski</a>
                 <div class="hidden space-x-20 md:flex font-poppins">
-                    <a href="index.html" class="relative text-lg text-gray-900 dark:text-white group">
+                    <a href="index.html" class="relative text-lg text-gray-900 dark:text-[#e4e2dd] group">
                         Home
                         <span class="absolute bottom-0 left-1/2 w-1/2 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-1/2 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="services.html" class="relative text-lg text-gray-600 dark:text-white hover:text-gray-900 dark:hover:text-gray-300 group">
+                    <a href="services.html" class="relative text-lg text-gray-600 dark:text-[#e4e2dd] hover:text-gray-900 dark:hover:text-gray-300 group">
                         Services
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
                     </a>
-                    <a href="projects.html" class="relative text-lg text-gray-600 dark:text-white hover:text-gray-900 dark:hover:text-gray-300 group">
+                    <a href="projects.html" class="relative text-lg text-gray-600 dark:text-[#e4e2dd] hover:text-gray-900 dark:hover:text-gray-300 group">
                         Projects
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
                     </a>
-                    <a href="contact.html" class="relative text-lg text-gray-600 dark:text-white hover:text-gray-900 dark:hover:text-gray-300 group">
+                    <a href="contact.html" class="relative text-lg text-gray-600 dark:text-[#e4e2dd] hover:text-gray-900 dark:hover:text-gray-300 group">
                         Contact
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center group-hover:w-1/2"></span>
@@ -176,10 +181,10 @@
         <!-- Mobile menu -->
         <div id="mobile-menu" class="hidden transform transition-all duration-300 ease-in-out opacity-0 scale-95 bg-[#F8F7F1] dark:bg-[#292929] shadow-lg absolute w-full">
             <div class="flex flex-col items-center px-2 pt-2 pb-3 space-y-3">
-                <a href="index.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 dark:text-white whitespace-nowrap hover:text-gray-900 dark:hover:text-gray-300">Home</a>
-                <a href="services.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 dark:text-white whitespace-nowrap hover:text-gray-900 dark:hover:text-gray-300">Services</a>
-                <a href="projects.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 dark:text-white whitespace-nowrap hover:text-gray-900 dark:hover:text-gray-300">Projects</a>
-                <a href="contact.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 dark:text-white whitespace-nowrap hover:text-gray-900 dark:hover:text-gray-300">Contact</a>
+                <a href="index.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Home</a>
+                <a href="services.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Services</a>
+                <a href="projects.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Projects</a>
+                <a href="contact.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Contact</a>
                 <div class="px-3 py-2 w-full">
                     <button class="bg-teal-600 dark:bg-[#992800] text-white w-full max-w-[200px] mx-auto px-4 py-1.5 text-sm rounded-md hover:bg-teal-700 dark:hover:bg-[#7a2000] font-poppins block whitespace-nowrap transition-all duration-300">
                         <a href="assets/cv/Stefan_Trajkovski_CV.pdf" download class="inline-block w-full">Download CV</a>
@@ -211,7 +216,7 @@
                                         <div class="gradient-text">Hello, I'm</div>
                                         <div>
                                             <span class="gradient-text">Stefan </span>
-                                            <span class="bg-teal-600 typing-cursor">|</span>
+                                            <span class="bg-teal-600 dark:bg-[#992800] typing-cursor">|</span>
                                         </div>
                                     </h1>
                                     <div class="space-y-4">
@@ -219,13 +224,13 @@
                                         <p class="text-gray-600 dark:text-gray-400">Transforming ideas into digital solutions with modern web technologies.</p>
                                     </div>
                                     <div class="flex flex-row gap-4 justify-center md:justify-start">
-                                        <a href="projects.html" class="inline-flex items-center px-3 py-2 text-white bg-teal-600 rounded-full transition-all duration-300 group md:px-6 md:py-3 hover:bg-teal-700">
+                                        <a href="projects.html" class="inline-flex items-center px-3 py-2 text-white bg-teal-600 dark:bg-[#992800] rounded-full transition-all duration-300 group md:px-6 md:py-3 hover:bg-teal-700 dark:hover:bg-[#7a2000]">
                                             <span class="mr-2 text-sm whitespace-nowrap md:text-base">View Projects</span>
                                             <svg class="w-4 h-4 transition-transform duration-300 transform md:w-5 md:h-5 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
                                             </svg>
                                         </a>
-                                        <a href="contact.html" class="inline-flex gap-2 items-center px-6 py-2 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white">
+                                        <a href="contact.html" class="inline-flex gap-2 items-center px-6 py-2 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 dark:text-white dark:border-teal-600 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white dark:hover:bg-teal-700">
                                             <span class="text-sm whitespace-nowrap md:text-base">Contact Me</span>
                                             <svg class="w-4 h-4 transition-all duration-300 md:w-5 md:h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
@@ -244,7 +249,7 @@
                                             </div>
                                         </div>
                                         <!-- Decorative elements -->
-                                        <div class="absolute -top-6 -right-6 w-12 h-12 rounded-lg backdrop-blur-sm rotate-12 bg-yellow-400/30 animate-float" style="animation-delay: -1s"></div>
+                                        <div class="absolute -top-6 -right-6 w-12 h-12 rounded-lg backdrop-blur-sm rotate-12 bg-yellow-400/30 dark:bg-[#d34a24]/30 animate-float" style="animation-delay: -1s"></div>
                                         <div class="absolute -bottom-6 -left-6 w-12 h-12 rounded-full backdrop-blur-sm bg-teal-400/30 animate-float" style="animation-delay: -3s"></div>
                                     </div>
                                 </div>
@@ -258,35 +263,35 @@
             <div class="py-20">
                 <h3 class="mb-12 text-2xl font-bold text-center text-gray-800 dark:text-white md:text-3xl">Technologies I Work With</h3>
                 <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/html5-logo.svg" alt="HTML5 logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">HTML5</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/css3-logo.svg" alt="CSS3 logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">CSS3</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/javascript-logo.svg" alt="JavaScript logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">JavaScript</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/react-logo.svg" alt="React logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">React</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <i class="mb-4 text-4xl text-gray-700 dark:text-gray-300 fas fa-code"></i>
                         <h4 class="font-semibold">API Development</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <i class="mb-4 text-4xl text-blue-500 dark:text-blue-400 fas fa-database"></i>
                         <h4 class="font-semibold">MySQL</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/php-logo.svg" alt="PHP logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">PHP/Laravel</h4>
                     </div>
-                    <div class="p-6 text-center bg-white dark:bg-[#292929] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                    <div class="p-6 text-center bg-white dark:bg-[#292929] dark:text-[#e4e2dd] rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <img src="assets/svg/python-logo.svg" alt="Python logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">Python</h4>
                     </div>
