--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="flex flex-col justify-center items-center py-20 min-h-screen">
                 <!-- Hero Content -->
                 <div class="mx-auto w-full max-w-6xl">
-                    <div class="relative overflow-visible">
+                    <div class="overflow-visible relative">
                         <!-- Background Elements -->
                         <div class="absolute -top-32 -right-32 w-96 h-96 bg-teal-100 rounded-full opacity-70 mix-blend-multiply filter blur-xl animate-blob"></div>
                         <div class="absolute -bottom-32 -left-32 w-96 h-96 bg-blue-100 rounded-full opacity-70 mix-blend-multiply filter blur-xl animate-blob animation-delay-2000"></div>
@@ -209,9 +209,9 @@
 
                         <!-- Main Content -->
                         <div class="relative p-8 md:p-12 rounded-3xl shadow-2xl backdrop-blur-lg bg-white/80 dark:bg-[#363636]/90 dark:text-white md:p-20">
-                            <div class="grid gap-8 md:gap-12 items-center md:grid-cols-2">
+                            <div class="grid gap-8 items-center md:gap-12 md:grid-cols-2">
                                 <!-- Text Content -->
-                                <div class="space-y-6 md:space-y-8 text-center md:text-left">
+                                <div class="space-y-6 text-center md:space-y-8 md:text-left">
                                     <h1 class="text-3xl font-bold md:text-4xl typing-container">
                                         <div class="gradient-text">Hello, I'm</div>
                                         <div>
@@ -223,14 +223,14 @@
                                         <p class="text-xl text-gray-600 dark:text-gray-300 md:text-2xl">Full Stack Developer</p>
                                         <p class="text-gray-600 dark:text-gray-400">Transforming ideas into digital solutions with modern web technologies.</p>
                                     </div>
-                                    <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
+                                    <div class="flex flex-col gap-4 justify-center sm:flex-row md:justify-start">
                                         <a href="projects.html" class="inline-flex items-center justify-center px-3 py-2 text-white bg-teal-600 dark:bg-[#992800] rounded-full transition-all duration-300 group md:px-6 md:py-3 hover:bg-teal-700 dark:hover:bg-[#7a2000]">
                                             <span class="mr-2 text-sm whitespace-nowrap md:text-base">View Projects</span>
                                             <svg class="w-4 h-4 transition-transform duration-300 transform md:w-5 md:h-5 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
                                             </svg>
                                         </a>
-                                        <a href="contact.html" class="inline-flex gap-2 items-center justify-center px-6 py-2 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 dark:text-white dark:border-teal-600 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white dark:hover:bg-teal-700">
+                                        <a href="contact.html" class="inline-flex gap-2 justify-center items-center px-6 py-2 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 dark:text-white dark:border-teal-600 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white dark:hover:bg-teal-700">
                                             <span class="text-sm whitespace-nowrap md:text-base">Contact Me</span>
                                             <svg class="w-4 h-4 transition-all duration-300 md:w-5 md:h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
